force-app/main/default/objects/sugati__Opportunity_Supplier__c/sugati__Opportunity_Supplier__c.object-meta.xml
<CustomObject>
    <label>Opportunity Supplier Guide</label>
    <nameField>
        <displayFormat>OSGN-{000000}</displayFormat>
        <label>Opportunity Supplier Guide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Supplier Guides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>