force-app/main/default/objects/sugati__Opportunity_Supplier__c/fields/sugati__OS_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__OS_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Supplier Guides</relationshipLabel>
    <relationshipName>Opportunity_Supplier_Guides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>