force-app/main/default/objects/sugati__Opportunity_Supplier__c/fields/sugati__OS_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__OS_Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Opportunity Supplier Guides</relationshipLabel>
    <relationshipName>Opportunity_Supplier_Guides</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>