force-app/main/default/objects/sugati__Opportunity_Supplier__c/fields/sugati__OS_Your_Guide__c.field-meta.xml
<CustomField>
    <fullName>sugati__OS_Your_Guide__c</fullName>
    <label>Your Guide</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>